--- a/ansible-wp.yml
+++ b/ansible-wp.yml
@@ -2,6 +2,10 @@
 - hosts: 192.168.56.131
   sudo: yes
   remote_user: vagrant
+  vars:
+    mysql_root_password: password
+    mysql_db_password: password
+    mysql_user_home: /root/
   tasks:
    - name: pingてすと
      ping:
@@ -16,7 +20,7 @@
   # - name: nginx install
   #   yum: name=nginx state=latest
    - name: php install
-     yum: name=php,php-mbstring,php-pear,php-fpm,php-mysql,mariadb,mariadb-server state=latest
+     yum: name=php,php-mbstring,php-pear,php-fpm,php-mysql,mariadb,mariadb-server,MySQL-python state=latest
    - file: path=/etc/php-fpm.d/www.conf state=touch mode="u=rw,g=rw,o=rw"
    - name: "phpの設定ファイルかきかえ"
      lineinfile: >-
@@ -31,16 +35,44 @@
      - regexp: 'group = apache'
        line: 'group = nginx'
    - file: path=/etc/nginx/conf.d/default.conf state=touch mode="u=rw,g=rw,o=rw"
-   - name: "nginx設定ファイルかきかえ"
-     shell: sed -i '30,36 s/#//g; 30,36 s/html/\/usr\/share\/nginx\/html\//g; s/\/scripts$fastcgi_script_name/$document_root$fastcgi_script_name/g; /$document_root$fastcgi_script_name\;/a fastcgi_param  PATH_INFO $fastcgi_path_info;' /etc/nginx/conf.d/default.conf
+  # - name: "nginx設定ファイルかきかえ"
+  #   shell: sed -i '30,36 s/#//g; 30,36 s/html/\/usr\/share\/nginx\/html\//g; s/\/scripts$fastcgi_script_name/$document_root$fastcgi_script_name/g; /$document_root$fastcgi_script_name\;/a fastcgi_param  PATH_INFO $fastcgi_path_info;' /etc/nginx/conf.d/default.conf
    - file: path=/etc/wgetrc state=touch mode="u=rw,g=rw,o=rw"
    - file: path=/usr/share/nginx/html state=touch mode="u=rw,g=rw,o=rwx"
-   - shell: sed -i "s/#https_proxy = http:\/\/proxy.yoyodyne.com:18023\//https_proxy = http:\/\/172.16.40.1:8888\//g; s/#http_proxy = http:\/\/proxy.yoyodyne.com:18023\//http_proxy = http:\/\/172.16.40.1:8888\//g" /etc/wgetrc 
+  # - shell: sed -i "s/#https_proxy = http:\/\/proxy.yoyodyne.com:18023\//https_proxy = http:\/\/172.16.40.1:8888\//g; s/#http_proxy = http:\/\/proxy.yoyodyne.com:18023\//http_proxy = http:\/\/172.16.40.1:8888\//g" /etc/wgetrc 
    - name: WordPress ダウンロード
      get_url: url="https://ja.wordpress.org/wordpress-4.5.2-ja.tar.gz" dest=/tmp/
      sudo: no
    - name: wordpress 解凍
      command: tar zxvf /tmp/wordpress-4.5.2-ja.tar.gz chdir=/usr/share/nginx/html/
+   - name: MariaDB を常時起動にする (サービスを有効化)
+     service:
+       name: mariadb
+       state: started
+       enabled: yes
+   - name: root アカウントのパスワードを設定
+     mysql_user:
+       name: root
+       host: localhost
+       password: "{{ mysql_root_password }}"
+   #- name: ~/.my.cnf を配置
+   #  template:
+   #    src: .my.cnf
+   #    dest: ~/.my.cnf
+   #    mode: 0600
+   #  sudo: yes
+   - name: データベース wordpress を作成
+     mysql_db:
+       name: wordpress
+       state: present
+   - name: MySQLユーザー n15001 を作成し，wordpress.* にすべての権限を与える
+     mysql_user:
+       name: n15001
+       password: "{{ mysql_db_password }}"
+       priv: "wordpress.*:ALL"
+       host: localhost
+       state: present
+
 
 
 #LAMPまでの手順
