--- a/ansible-wp.yml
+++ b/ansible-wp.yml
@@ -2,23 +2,23 @@
 - hosts: 192.168.56.131
   sudo: yes
   remote_user: vagrant
-  vars:
-    mysql_root_password: password
-    mysql_db_password: password
-    mysql_user_home: /root/
+#  vars:
+#　mysql_root_password: password
+#   mysql_db_password: password
+#   mysql_user_home: /root/
   tasks:
    - name: pingてすと
      ping:
    - file: path=/home/vagrant/.ssh/authorized_keys state=touch mode="u=rw,g=,o="
    - file: path=/etc/yum.conf state=touch mode="u=rw,g=rw,o=rw"
-  # - name: yum.conf proxy
-  #   lineinfile: >
-  #     dest=/etc/yum.conf
-  #     line='proxy=http://172.16.40.1:8888'
-  # - name: nginx repo
-  #   yum: name=http://nginx.org/packages/centos/7/noarch/RPMS/nginx-release-centos-7-0.el7.ngx.noarch.rpm state=present
-  # - name: nginx install
-  #   yum: name=nginx state=latest
+   - name: yum.conf proxy
+     lineinfile: >
+       dest=/etc/yum.conf
+       line='proxy=http://172.16.40.1:8888'
+   - name: nginx repo
+     yum: name=http://nginx.org/packages/centos/7/noarch/RPMS/nginx-release-centos-7-0.el7.ngx.noarch.rpm state=present
+   - name: nginx install
+     yum: name=nginx state=latest
    - name: php install
      yum: name=php,php-mbstring,php-pear,php-fpm,php-mysql,mariadb,mariadb-server,MySQL-python state=latest
    - file: path=/etc/php-fpm.d/www.conf state=touch mode="u=rw,g=rw,o=rw"
@@ -35,11 +35,11 @@
      - regexp: 'group = apache'
        line: 'group = nginx'
    - file: path=/etc/nginx/conf.d/default.conf state=touch mode="u=rw,g=rw,o=rw"
-  # - name: "nginx設定ファイルかきかえ"
-  #   shell: sed -i '30,36 s/#//g; 30,36 s/html/\/usr\/share\/nginx\/html\//g; s/\/scripts$fastcgi_script_name/$document_root$fastcgi_script_name/g; /$document_root$fastcgi_script_name\;/a fastcgi_param  PATH_INFO $fastcgi_path_info;' /etc/nginx/conf.d/default.conf
+   - name: "nginx設定ファイルかきかえ"
+     shell: sed -i '30,36 s/#//g; 30,36 s/html/\/usr\/share\/nginx\/html\//g; s/\/scripts$fastcgi_script_name/$document_root$fastcgi_script_name/g; /$document_root$fastcgi_script_name\;/a fastcgi_param  PATH_INFO $fastcgi_path_info;' /etc/nginx/conf.d/default.conf
    - file: path=/etc/wgetrc state=touch mode="u=rw,g=rw,o=rw"
    - file: path=/usr/share/nginx/html state=touch mode="u=rw,g=rw,o=rwx"
-  # - shell: sed -i "s/#https_proxy = http:\/\/proxy.yoyodyne.com:18023\//https_proxy = http:\/\/172.16.40.1:8888\//g; s/#http_proxy = http:\/\/proxy.yoyodyne.com:18023\//http_proxy = http:\/\/172.16.40.1:8888\//g" /etc/wgetrc 
+   - shell: sed -i "s/#https_proxy = http:\/\/proxy.yoyodyne.com:18023\//https_proxy = http:\/\/172.16.40.1:8888\//g; s/#http_proxy = http:\/\/proxy.yoyodyne.com:18023\//http_proxy = http:\/\/172.16.40.1:8888\//g" /etc/wgetrc 
    - name: WordPress ダウンロード
      get_url: url="https://ja.wordpress.org/wordpress-4.5.2-ja.tar.gz" dest=/tmp/
      sudo: no
@@ -50,28 +50,42 @@
        name: mariadb
        state: started
        enabled: yes
-   - name: root アカウントのパスワードを設定
-     mysql_user:
-       name: root
-       host: localhost
-       password: "{{ mysql_root_password }}"
+    - name: nginxを常時起動にする (サービスを有効化)
+     service:
+       name: nginx
+       state: started
+       enabled: yes
+    - name: php-fpm を常時起動にする (サービスを有効化)
+     service:
+       name: php-fpm
+       state: started
+       enabled: yes
+       
+       
+**自動でwordpressのインストール画面まで出るようになった、データベースの設定がうまく行かないのでインストールは出来ない。**
+
+#   - name: root アカウントのパスワードを設定
+#     mysql_user:
+#       name: root
+#       host: localhost
+#       password: "{{ mysql_root_password }}"
    #- name: ~/.my.cnf を配置
    #  template:
    #    src: .my.cnf
    #    dest: ~/.my.cnf
    #    mode: 0600
    #  sudo: yes
-   - name: データベース wordpress を作成
-     mysql_db:
-       name: wordpress
-       state: present
-   - name: MySQLユーザー n15001 を作成し，wordpress.* にすべての権限を与える
-     mysql_user:
-       name: n15001
-       password: "{{ mysql_db_password }}"
-       priv: "wordpress.*:ALL"
-       host: localhost
-       state: present
+#   - name: データベース wordpress を作成
+#     mysql_db:
+#       name: wordpress
+#       state: present
+#   - name: MySQLユーザー n15001 を作成し，wordpress.* にすべての権限を与える
+#     mysql_user:
+#       name: n15001
+#       password: "{{ mysql_db_password }}"
+#       priv: "wordpress.*:ALL"
+#       host: localhost
+#       state: present
 
 
 
@@ -81,10 +95,8 @@
 #sudo vi /etc/yum.conf → proxy=http://172.16.40.1:8888を記述
 #sudo yum update プロンプトy
 
-
 #   - name:
 #     yum: name=httpd state=latest
-
 
 #- file: path=/etc/yum.conf owner=root group=root mode=0777
 
