--- a/ansible-wp.yml
+++ b/ansible-wp.yml
@@ -60,9 +60,8 @@
        name: php-fpm
        state: started
        enabled: yes
-       
-       
-**自動でwordpressのインストール画面まで出るようになった、データベースの設定がうまく行かないのでインストールは出来ない。**
+
+#自動でwordpressのインストール画面まで出るようになった、データベースの設定がうまく行かないのでインストールは出来ない。
 
 #   - name: root アカウントのパスワードを設定
 #     mysql_user:
