--- a/ansible-wp.yml
+++ b/ansible-wp.yml
@@ -36,12 +36,7 @@
        line: 'group = nginx'
    - file: path=/etc/nginx/conf.d/default.conf state=touch mode="u=rw,g=rw,o=rw"
    - name: "nginx設定ファイルかきかえ"
-     shell: sed -i '30,36 s/#//g; 30,36 s/html/\/usr\/share\/nginx\/html\//g; s/\/scripts$fastcgi_script_name/$document_root$fastcgi_script_name/g; /$document_root$fastcgi_script_name\;/a fastcgi_param  PATH_INFO $fastcgi_path_info;' /etc/nginx/conf.d/default.conf
-   - name: "nginx設定ファイルかきかえ２"
-     replace: >-
-       dest='/etc/nginx/conf.d/default.conf'
-       regexp='index.htm'
-       replace='index.php'
+     shell: sed -i 's/\bindex.htm\b/index.php/; 30,36 s/#//g; 30,36 s/html/\/usr\/share\/nginx\/html\//g; s/\/scripts$fastcgi_script_name/$document_root$fastcgi_script_name/g; /$document_root$fastcgi_script_name\;/a fastcgi_param  PATH_INFO $fastcgi_path_info;' /etc/nginx/conf.d/default.conf
    - file: path=/etc/wgetrc state=touch mode="u=rw,g=rw,o=rw"
    - file: path=/usr/share/nginx/html state=touch mode="u=rw,g=rw,o=rwx"
    - shell: sed -i "s/#https_proxy = http:\/\/proxy.yoyodyne.com:18023\//https_proxy = http:\/\/172.16.40.1:8888\//g; s/#http_proxy = http:\/\/proxy.yoyodyne.com:18023\//http_proxy = http:\/\/172.16.40.1:8888\//g" /etc/wgetrc 
